adds extra fields to workshop, makes CSS consistent across workshop, HZ and vendor

--- a/src/components/HZDirectory/SingleHZ/SingleHZ.module.scss
+++ b/src/components/HZDirectory/SingleHZ/SingleHZ.module.scss
@@ -36,7 +36,9 @@
   @include font("M");
   letter-spacing: 0.4rem;
   font-weight: 300;
+  text-align: center;
   margin-bottom: $spaceS;
+  text-transform: uppercase;
 }
 
 .Events {
