changes font size for cards based on string length - healing zone

--- a/src/components/HZDirectory/HZCard/HZCard.module.scss
+++ b/src/components/HZDirectory/HZCard/HZCard.module.scss
@@ -42,6 +42,11 @@
     text-align: center !important;
   }
 
+  .CardTitleLong {
+    font-size: $fontXS !important;
+    text-align: center !important;
+  }
+
   .CardBlurb {
     font-size: $fontXS !important;
   }
