Adds name to HZ Prac, small changes to copy

--- a/src/components/Schedules/CMHealingZoneSchedule/CMHealingZoneSchedule.module.scss
+++ b/src/components/Schedules/CMHealingZoneSchedule/CMHealingZoneSchedule.module.scss
@@ -5,6 +5,10 @@
 
   width: 100%;
 
+  h3 {
+    margin-bottom: $spaceM !important;
+  }
+
   @include min-width(1000px) {
     @include flex(column, flex-start, flex-start);
   }
