--- a/src/components/HZDirectory/SingleHZ/SingleHZ.module.scss
+++ b/src/components/HZDirectory/SingleHZ/SingleHZ.module.scss
@@ -41,6 +41,15 @@
   text-transform: uppercase;
 }
 
+.Name {
+  @include font("SSM");
+  letter-spacing: 0.2rem;
+  font-weight: 300;
+  text-align: center;
+  margin-bottom: $spaceS;
+  text-transform: uppercase;
+}
+
 .Events {
   @include flex(row, flex-start, flex-start);
   margin-bottom: $spaceS;
