final changes to v2, booking buttons have working links, fixed card title display issue

--- a/src/components/HZDirectory/HZCard/HZCard.module.scss
+++ b/src/components/HZDirectory/HZCard/HZCard.module.scss
@@ -47,6 +47,11 @@
     text-align: center !important;
   }
 
+  .CardTitleExtraLong {
+    font-size: 1.1rem !important;
+    text-align: center !important;
+  }
+
   .CardBlurb {
     font-size: $fontXS !important;
   }
