--- a/src/components/HZDirectory/SingleHZ/SingleHZ.module.scss
+++ b/src/components/HZDirectory/SingleHZ/SingleHZ.module.scss
@@ -124,3 +124,11 @@
     color: $primaryDD;
   }
 }
+
+.BookNow {
+  @include cta-button();
+  @include font("S");
+  font-weight: 300;
+  letter-spacing: 0.4rem;
+  margin-bottom: $spaceM;
+}
