--- a/src/components/WorkshopDirectory/SingleWorkshop/SingleWorkshop.module.scss
+++ b/src/components/WorkshopDirectory/SingleWorkshop/SingleWorkshop.module.scss
@@ -74,6 +74,10 @@
 
   a:hover {
     color: $primaryDD;
+
+    p {
+      color: $primaryDD;
+    }
   }
 }
 
@@ -108,4 +112,13 @@
   font-weight: 300;
   letter-spacing: 0.4rem;
   margin-bottom: $spaceM;
+}
+
+.WebsiteLink {
+  @include flex(row, center, center);
+
+  p {
+    margin-left: $spaceS;
+    transition: 0.5s;
+  }
 }
