--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -22,7 +22,7 @@
 }
 
 .Logo {
-  height: 60%;
+  height: 80%;
   object-fit: cover;
   object-position: center;
 
@@ -32,7 +32,7 @@
 
   @include min-width(1025px) {
     margin-left: $spaceM;
-    height: 80%;
+    // height: 80%;
   }
 }
 
