--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -4,7 +4,7 @@
   @include flex(row, center, center);
 
   height: 10rem;
-  width: 100%;
+  width: 100vw;
   background: linear-gradient(to bottom, rgba(white, 0.7), rgba(white, 0));
   z-index: 2000;
   position: fixed;
