converts most bodies of text to be editable on contentful (minus get involved and about us)

--- a/src/components/BasicInfo/BasicInfo.module.scss
+++ b/src/components/BasicInfo/BasicInfo.module.scss
@@ -64,8 +64,8 @@
   }
 }
 
-.Right {
-  h3:last-of-type {
-    margin-top: $spaceM;
-  }
-}
+// .Right {
+//   h3:last-of-type {
+//     margin-top: $spaceM;
+//   }
+// }
