updates buttons to refelct site division, adds contentful support for editing text on new pages, small fixes

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -12,8 +12,10 @@
 }
 
 .Volunteers {
-  @include flex(column, flex-start, flex-start);
+  @include flex(column, flex-start, center);
 
+  width: 100%;
+  max-width: $contentWidthL;
   margin-top: $spaceS;
   padding: 0 $spaceS;
 
