fixes carousel, updates packages

--- a/src/components/Layout/base.scss
+++ b/src/components/Layout/base.scss
@@ -58,9 +58,9 @@ button {
   -moz-appearance: none;
 }
 
-button:active {
-  transform: scale(0.99);
-}
+// button:active {
+//   transform: scale(0.99);
+// }
 
 .cta-button-wrapper {
   margin: 0 auto;
